buggery/tests/errors/too_few_params.bgr


default:
  other("asd", "ad")

other(A,B,C):
  $ ls
